--- a/comp1238.md
+++ b/comp1238.md
@@ -1,20 +1,21 @@
-# Comp1238 - Notes
-## Week 1 - Computers
-- Hardware vs software
-- Date becomes information
+# COMP1238 – Review Notes
 
-## Week 2 - Bits & Bytes
-- 1 Byte = 8 bits
-- computer use binary
+## Week 1 – Introduction to Computers
+•⁠  ⁠Learned the difference between hardware and software.
+•⁠  ⁠Computers process data to produce useful information.
 
-  ## Week 3 - operating Systems
-  - OS manages hardware
-  - Examples: Windows, macOS
- 
-  ## Wee 4 - Networks
-  - Computers share date
-  - Internet connects networks
- 
-  ## Week 5 - Security
-  - use strong passwords
-  - Beware of fake links
+## Week 2 – Bits and Bytes
+•⁠  ⁠1 Byte = 8 bits.
+•⁠  ⁠Binary numbers are used to represent data in computers.
+
+## Week 3 – Operating Systems
+•⁠  ⁠The OS manages hardware and software resources.
+•⁠  ⁠Examples include Windows, macOS, and Linux.
+
+## Week 4 – Networks and the Internet
+•⁠  ⁠Networks allow computers to share information.
+•⁠  ⁠The Internet is a global network connecting millions of devices.
+
+## Week 5 – Cybersecurity Basics
+•⁠  ⁠Always use strong passwords and avoid suspicious links.
+•⁠  ⁠Firewalls help protect computers from external threats.
